@@ -208,8 +208,7 @@ public final class CalendarUtils {
 
     public static LocalDate adjustRecurringDate(final LocalDate recuringDate, final Integer numberOfDays) {
         if (recuringDate.getDayOfMonth() == 1) {
-            LocalDate adjustedRecurringDate = recuringDate.plusDays(numberOfDays);
-            return adjustedRecurringDate;
+            return recuringDate.plusDays(numberOfDays);
         }
         return recuringDate;
     }
@@ -221,14 +220,10 @@ public final class CalendarUtils {
             final RRule rrule = new RRule(recurringRule);
             rrule.validate();
 
-            final Recur recur = rrule.getRecur();
-
-            return recur;
+            return rrule.getRecur();
         } catch (final ParseException e) {
-            // TODO Auto-generated catch block
             log.error("Problem occurred in getICalRecur function", e);
         } catch (final ValidationException e) {
-            // TODO Auto-generated catch block
             log.error("Problem occurred in getICalRecur function", e);
         }
 
@@ -302,10 +297,11 @@ public final class CalendarUtils {
                 NthDayNameEnum nthDayName = NthDayNameEnum.from(nthDayType.toString());
                 DayNameEnum weekdayType = DayNameEnum.from(weekDay.getDay().name());
                 if (recur.getInterval() == 1 || recur.getInterval() == -1) {
-                    humanReadable = "Monthly on " + nthDayName.getCode().toLowerCase() + " " + weekdayType.getCode().toLowerCase();
+                    humanReadable = "Monthly on " + nthDayName.getCode().toLowerCase(java.util.Locale.ROOT) + " "
+                            + weekdayType.getCode().toLowerCase(java.util.Locale.ROOT);
                 } else {
-                    humanReadable = "Every " + recur.getInterval() + " months on " + nthDayName.getCode().toLowerCase() + " "
-                            + weekdayType.getCode().toLowerCase();
+                    humanReadable = "Every " + recur.getInterval() + " months on " + nthDayName.getCode().toLowerCase(java.util.Locale.ROOT)
+                            + " " + weekdayType.getCode().toLowerCase(java.util.Locale.ROOT);
                 }
             } else if (monthDay != null) {
                 if (monthDay == -1) {
@@ -385,7 +381,7 @@ public final class CalendarUtils {
         final Collection<LocalDate> recurDate = getRecurringDates(recur, seedDate, startDate, date.plusDays(1), 1,
                 isSkipRepaymentonFirstDayOfMonth, numberOfDays);
 
-        return (recurDate == null || recurDate.isEmpty()) ? false : recurDate.contains(date);
+        return recurDate != null && !recurDate.isEmpty() && recurDate.contains(date);
     }
 
     public enum DayNameEnum {
@@ -585,10 +581,9 @@ public final class CalendarUtils {
         if (isValidRecurringDate(recur, seedDate, oldRepaymentDate, isSkipRepaymentOnFirstDayOfMonth, numberOfDays)) {
             return oldRepaymentDate;
         }
-        LocalDate nextRepaymentDate = getNextRepaymentMeetingDate(recurringRule, seedDate, oldRepaymentDate, loanRepaymentInterval,
-                frequency, workingDays, isSkipRepaymentOnFirstDayOfMonth, numberOfDays);
 
-        return nextRepaymentDate;
+        return getNextRepaymentMeetingDate(recurringRule, seedDate, oldRepaymentDate, loanRepaymentInterval, frequency, workingDays,
+                isSkipRepaymentOnFirstDayOfMonth, numberOfDays);
     }
 
     public static LocalDate getNextRepaymentMeetingDate(final String recurringRule, final LocalDate seedDate, final LocalDate repaymentDate,
@@ -701,10 +696,10 @@ public final class CalendarUtils {
         StringBuilder sb = new StringBuilder();
 
         for (int i = 0; i < calendarTypeOptions.size() - 1; i++) {
-            sb.append(calendarTypeOptions.get(i).toString() + ",");
+            sb.append(calendarTypeOptions.get(i).toString()).append(",");
         }
 
-        sb.append(calendarTypeOptions.get(calendarTypeOptions.size() - 1).toString());
+        sb.append(calendarTypeOptions.getLast().toString());
 
         return sb.toString();
     }
@@ -760,7 +755,8 @@ public final class CalendarUtils {
             if (nthDayType == NthDayType.ONE || nthDayType == NthDayType.TWO || nthDayType == NthDayType.THREE
                     || nthDayType == NthDayType.FOUR) {
                 baseDataValidator.reset().parameter(repeatsOnDayParamName).value(repeatsOnDay).cantBeBlankWhenParameterProvidedIs(
-                        repeatsOnNthDayOfMonthParamName, NthDayNameEnum.from(nthDayType.toString()).getCode().toLowerCase());
+                        repeatsOnNthDayOfMonthParamName,
+                        NthDayNameEnum.from(nthDayType.toString()).getCode().toLowerCase(java.util.Locale.ROOT));
             }
         }
     }
