@@ -25,6 +25,7 @@ import static org.apache.fineract.investor.data.ExternalTransferStatus.PENDING_I
 import com.google.gson.JsonElement;
 import com.google.gson.reflect.TypeToken;
 import java.lang.reflect.Type;
+import java.sql.SQLException;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -59,10 +60,15 @@ import org.apache.fineract.investor.domain.ExternalAssetOwner;
 import org.apache.fineract.investor.domain.ExternalAssetOwnerRepository;
 import org.apache.fineract.investor.domain.ExternalAssetOwnerTransfer;
 import org.apache.fineract.investor.domain.ExternalAssetOwnerTransferRepository;
+import org.apache.fineract.investor.exception.ExternalAssetOwnerDuplicateException;
 import org.apache.fineract.investor.exception.ExternalAssetOwnerInitiateTransferException;
+import org.apache.fineract.investor.serialization.ExternalAssetOwnerValidator;
 import org.apache.fineract.portfolio.loanaccount.domain.LoanRepository;
 import org.apache.fineract.portfolio.loanaccount.domain.LoanStatus;
 import org.apache.fineract.portfolio.loanaccount.exception.LoanNotFoundException;
+import org.springframework.dao.DataAccessException;
+import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.orm.jpa.JpaSystemException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -75,6 +81,8 @@ public class ExternalAssetOwnersWriteServiceImpl implements ExternalAssetOwnersW
             ExternalTransferStatus.ACTIVE);
     private static final List<ExternalTransferStatus> BUYBACK_READY_STATUSES_FOR_DELAY_SETTLEMENT = List
             .of(ExternalTransferStatus.ACTIVE_INTERMEDIATE, ExternalTransferStatus.ACTIVE);
+    private static final String SQL_STATE_INTEGRITY_CONSTRAINT_VIOLATION = "23";
+
     private final ExternalAssetOwnerTransferRepository externalAssetOwnerTransferRepository;
     private final ExternalAssetOwnerRepository externalAssetOwnerRepository;
     private final FromJsonHelper fromApiJsonHelper;
@@ -82,6 +90,8 @@ public class ExternalAssetOwnersWriteServiceImpl implements ExternalAssetOwnersW
     private final DelayedSettlementAttributeService delayedSettlementAttributeService;
     private final ConfigurationDomainService configurationDomainService;
     private final ExternalAssetOwnersReadService externalAssetOwnersReadService;
+    private final ExternalAssetOwnerValidator externalAssetOwnerValidator;
+    private final ExternalAssetOwnerHelper externalAssetOwnerHelper;
 
     @Override
     @Transactional
@@ -168,15 +178,15 @@ public class ExternalAssetOwnersWriteServiceImpl implements ExternalAssetOwnersW
         if (effectiveTransfers.size() == 2) {
             throw new ExternalAssetOwnerInitiateTransferException("This loan cannot be sold, there is already an in progress transfer");
         } else if (effectiveTransfers.size() == 1) {
-            if (PENDING.equals(effectiveTransfers.get(0).getStatus())) {
+            ExternalAssetOwnerTransfer transfer = effectiveTransfers.getFirst();
+            ExternalTransferStatus transferStatus = transfer.getStatus();
+            if (PENDING.equals(transferStatus)) {
                 throw new ExternalAssetOwnerInitiateTransferException(
                         "External asset owner transfer is already in PENDING state for this loan");
-            } else if (ExternalTransferStatus.ACTIVE.equals(effectiveTransfers.get(0).getStatus())) {
+            }
+            if (!ExternalTransferStatus.ACTIVE.equals(transferStatus)) {
                 throw new ExternalAssetOwnerInitiateTransferException(
-                        "This loan cannot be sold, because it is owned by an external asset owner");
-            } else {
-                throw new ExternalAssetOwnerInitiateTransferException(String.format(
-                        "This loan cannot be sold, because it is incorrect state! (transferId = %s)", effectiveTransfers.get(0).getId()));
+                        String.format("This loan cannot be sold, because it is incorrect state! (transferId = %s)", transfer.getId()));
             }
         }
     }
@@ -185,7 +195,7 @@ public class ExternalAssetOwnersWriteServiceImpl implements ExternalAssetOwnersW
         if (effectiveTransfers.size() > 1) {
             throw new ExternalAssetOwnerInitiateTransferException("This loan cannot be sold, there is already an in progress transfer");
         } else if (effectiveTransfers.size() == 1) {
-            if (!ACTIVE_INTERMEDIATE.equals(effectiveTransfers.get(0).getStatus())) {
+            if (!ACTIVE_INTERMEDIATE.equals(effectiveTransfers.getFirst().getStatus())) {
                 throw new ExternalAssetOwnerInitiateTransferException(
                         "This loan cannot be sold, because it is not in ACTIVE-INTERMEDIATE state.");
             }
@@ -201,16 +211,18 @@ public class ExternalAssetOwnersWriteServiceImpl implements ExternalAssetOwnersW
         if (effectiveTransfers.size() > 1) {
             throw new ExternalAssetOwnerInitiateTransferException("This loan cannot be sold, there is already an in progress transfer");
         } else if (effectiveTransfers.size() == 1) {
-            if (PENDING_INTERMEDIATE.equals(effectiveTransfers.get(0).getStatus())) {
+            ExternalAssetOwnerTransfer transfer = effectiveTransfers.getFirst();
+            ExternalTransferStatus transferStatus = transfer.getStatus();
+            if (PENDING_INTERMEDIATE.equals(transferStatus)) {
                 throw new ExternalAssetOwnerInitiateTransferException(
                         "External asset owner transfer is already in PENDING_INTERMEDIATE state for this loan");
-            } else if (ExternalTransferStatus.ACTIVE.equals(effectiveTransfers.get(0).getStatus())) {
-                throw new ExternalAssetOwnerInitiateTransferException(
-                        "This loan cannot be sold, because it is owned by an external asset owner");
-            } else {
-                throw new ExternalAssetOwnerInitiateTransferException(String.format(
-                        "This loan cannot be sold, because it is incorrect state! (transferId = %s)", effectiveTransfers.get(0).getId()));
             }
+            if (!ExternalTransferStatus.ACTIVE.equals(transferStatus)) {
+                throw new ExternalAssetOwnerInitiateTransferException(
+                        String.format("This loan cannot be sold, because it is incorrect state! (transferId = %s)", transfer.getId()));
+            }
+            // Owner-to-owner transfer with delayed settlement: allow intermediarySale when loan is currently
+            // owned. The actual ownership switch happens atomically in the COB step.
         }
     }
 
@@ -229,17 +241,17 @@ public class ExternalAssetOwnersWriteServiceImpl implements ExternalAssetOwnersW
         } else if (effectiveTransfers.size() == 2) {
             throw new ExternalAssetOwnerInitiateTransferException(
                     "This loan cannot be bought back, external asset owner buyback transfer is already in progress");
-        } else if (!BUYBACK_READY_STATUSES.contains(effectiveTransfers.get(0).getStatus())) {
+        } else if (!BUYBACK_READY_STATUSES.contains(effectiveTransfers.getFirst().getStatus())) {
             throw new ExternalAssetOwnerInitiateTransferException(
                     String.format("This loan cannot be bought back, effective transfer is not in right state: %s",
-                            effectiveTransfers.get(0).getStatus()));
-        } else if (DateUtils.isBefore(settlementDate, effectiveTransfers.get(0).getSettlementDate())) {
+                            effectiveTransfers.getFirst().getStatus()));
+        } else if (DateUtils.isBefore(settlementDate, effectiveTransfers.getFirst().getSettlementDate())) {
             throw new ExternalAssetOwnerInitiateTransferException(
                     String.format("This loan cannot be bought back, settlement date is earlier than effective transfer settlement date: %s",
-                            effectiveTransfers.get(0).getSettlementDate()));
+                            effectiveTransfers.getFirst().getSettlementDate()));
         }
 
-        return effectiveTransfers.get(0);
+        return effectiveTransfers.getFirst();
     }
 
     private ExternalAssetOwnerTransfer fetchAndValidateEffectiveTransferForBuybackWithDelayedSettlement(
@@ -262,17 +274,17 @@ public class ExternalAssetOwnersWriteServiceImpl implements ExternalAssetOwnersW
                 || Set.of(ExternalTransferStatus.ACTIVE, ExternalTransferStatus.BUYBACK).equals(effectiveTransferStatuses)) {
             throw new ExternalAssetOwnerInitiateTransferException(
                     "This loan cannot be bought back, external asset owner buyback transfer is already in progress");
-        } else if (!BUYBACK_READY_STATUSES_FOR_DELAY_SETTLEMENT.contains(effectiveTransfers.get(0).getStatus())) {
+        } else if (!BUYBACK_READY_STATUSES_FOR_DELAY_SETTLEMENT.contains(effectiveTransfers.getFirst().getStatus())) {
             throw new ExternalAssetOwnerInitiateTransferException(
                     String.format("This loan cannot be bought back, effective transfer is not in right state: %s",
-                            effectiveTransfers.get(0).getStatus()));
-        } else if (DateUtils.isBefore(settlementDate, effectiveTransfers.get(0).getSettlementDate())) {
+                            effectiveTransfers.getFirst().getStatus()));
+        } else if (DateUtils.isBefore(settlementDate, effectiveTransfers.getFirst().getSettlementDate())) {
             throw new ExternalAssetOwnerInitiateTransferException(
                     String.format("This loan cannot be bought back, settlement date is earlier than effective transfer settlement date: %s",
-                            effectiveTransfers.get(0).getSettlementDate()));
+                            effectiveTransfers.getFirst().getSettlementDate()));
         }
 
-        return effectiveTransfers.get(0);
+        return effectiveTransfers.getFirst();
     }
 
     private ExternalAssetOwnerTransfer fetchAndValidateEffectiveTransferForCancel(final Long transferId) {
@@ -284,10 +296,9 @@ public class ExternalAssetOwnersWriteServiceImpl implements ExternalAssetOwnersW
                 .findEffectiveTransfersOrderByIdDesc(selectedTransfer.getLoanId(), DateUtils.getBusinessLocalDate());
         if (effective.isEmpty()) {
             throw new ExternalAssetOwnerInitiateTransferException(
-                    String.format("This loan cannot be cancelled, there is no effective transfer for this loan"));
-        } else if (!Objects.equals(effective.get(0).getId(), selectedTransfer.getId())) {
-            throw new ExternalAssetOwnerInitiateTransferException(
-                    String.format("This loan cannot be cancelled, selected transfer is not the latest"));
+                    "This loan cannot be cancelled, there is no effective transfer for this loan");
+        } else if (!Objects.equals(effective.getFirst().getId(), selectedTransfer.getId())) {
+            throw new ExternalAssetOwnerInitiateTransferException("This loan cannot be cancelled, selected transfer is not the latest");
         } else if (selectedTransfer.getStatus() != PENDING && selectedTransfer.getStatus() != ExternalTransferStatus.BUYBACK) {
             throw new ExternalAssetOwnerInitiateTransferException(
                     "This loan cannot be cancelled, the selected transfer status is not pending or buyback");
@@ -315,8 +326,7 @@ public class ExternalAssetOwnersWriteServiceImpl implements ExternalAssetOwnersW
 
     private ExternalTransferStatus determineStatusAfterBuyback(ExternalAssetOwnerTransfer effectiveTransfer) {
         return switch (effectiveTransfer.getStatus()) {
-            case PENDING -> ExternalTransferStatus.BUYBACK;
-            case ACTIVE -> ExternalTransferStatus.BUYBACK;
+            case PENDING, ACTIVE -> ExternalTransferStatus.BUYBACK;
             case ACTIVE_INTERMEDIATE -> ExternalTransferStatus.BUYBACK_INTERMEDIATE;
             default -> throw new ExternalAssetOwnerInitiateTransferException(String.format(
                     "This loan cannot be bought back, effective transfer is not in right state: %s", effectiveTransfer.getStatus()));
@@ -340,11 +350,12 @@ public class ExternalAssetOwnersWriteServiceImpl implements ExternalAssetOwnersW
     }
 
     private CommandProcessingResult buildResponseData(ExternalAssetOwnerTransfer savedExternalAssetOwnerTransfer) {
-        return new CommandProcessingResultBuilder().withEntityId(savedExternalAssetOwnerTransfer.getId())
-                .withEntityExternalId(savedExternalAssetOwnerTransfer.getExternalId())
-                .withSubEntityId(savedExternalAssetOwnerTransfer.getLoanId())
+        return new CommandProcessingResultBuilder() //
+                .withEntityId(savedExternalAssetOwnerTransfer.getId()) //
+                .withEntityExternalId(savedExternalAssetOwnerTransfer.getExternalId()) //
+                .withSubEntityId(savedExternalAssetOwnerTransfer.getLoanId()) //
                 .withSubEntityExternalId(Objects.isNull(savedExternalAssetOwnerTransfer.getExternalLoanId()) ? null
-                        : savedExternalAssetOwnerTransfer.getExternalLoanId())
+                        : savedExternalAssetOwnerTransfer.getExternalLoanId()) //
                 .build();
     }
 
@@ -579,11 +590,33 @@ public class ExternalAssetOwnersWriteServiceImpl implements ExternalAssetOwnersW
         return fromApiJsonHelper.extractStringNamed(ExternalTransferRequestParameters.PURCHASE_PRICE_RATIO, json);
     }
 
-    private ExternalAssetOwner getOwner(JsonElement json) {
-        String ownerExternalId = fromApiJsonHelper.extractStringNamed(ExternalTransferRequestParameters.OWNER_EXTERNAL_ID, json);
-        Optional<ExternalAssetOwner> byExternalId = externalAssetOwnerRepository
-                .findByExternalId(ExternalIdFactory.produce(ownerExternalId));
-        return byExternalId.orElseGet(() -> createAndGetAssetOwner(ownerExternalId));
+    private ExternalAssetOwner getOwner(final JsonElement json) {
+        final String ownerExternalId = fromApiJsonHelper.extractStringNamed(ExternalTransferRequestParameters.OWNER_EXTERNAL_ID, json);
+        final ExternalId externalId = ExternalIdFactory.produce(ownerExternalId);
+        return externalAssetOwnerRepository.findByExternalId(externalId).orElseGet(() -> {
+            final Long ownerId = findOrCreateOwnerId(externalId);
+            // getReferenceById returns a lazy proxy without hitting the DB. findById would fail
+            // here because the outer transaction's persistence context does not contain the entity
+            // committed by the inner REQUIRES_NEW transaction.
+            return externalAssetOwnerRepository.getReferenceById(ownerId);
+        });
+    }
+
+    private Long findOrCreateOwnerId(final ExternalId externalId) {
+        try {
+            return externalAssetOwnerHelper.findOrCreateId(externalId);
+        } catch (JpaSystemException | DataIntegrityViolationException e) {
+            if (!isConstraintViolation(e)) {
+                throw e;
+            }
+            // Another thread created the owner concurrently - retry
+            return externalAssetOwnerHelper.findOrCreateId(externalId);
+        }
+    }
+
+    private boolean isConstraintViolation(final DataAccessException e) {
+        return e.getMostSpecificCause() instanceof SQLException sqlEx && sqlEx.getSQLState() != null
+                && sqlEx.getSQLState().startsWith(SQL_STATE_INTEGRITY_CONSTRAINT_VIOLATION);
     }
 
     private ExternalAssetOwner createAndGetAssetOwner(String externalId) {
@@ -600,5 +633,21 @@ public class ExternalAssetOwnersWriteServiceImpl implements ExternalAssetOwnersW
     private List<LoanStatus> getAllowedLoanStatusesForDelayedSettlement() {
         return configurationDomainService.getAllowedLoanStatusesOfDelayedSettlementForExternalAssetTransfer().stream()
                 .map(LoanStatus::valueOf).collect(Collectors.toList());
+    }
+
+    @Override
+    public CommandProcessingResult createExternalAssetOwner(JsonCommand command) {
+        externalAssetOwnerValidator.validateForCreate(command);
+        String ownerExternalId = command.stringValueOfParameterNamed(ExternalTransferRequestParameters.OWNER_EXTERNAL_ID);
+        Optional<ExternalAssetOwner> optExternalId = externalAssetOwnerRepository
+                .findByExternalId(ExternalIdFactory.produce(ownerExternalId));
+        if (optExternalId.isPresent()) {
+            throw new ExternalAssetOwnerDuplicateException(ownerExternalId);
+        }
+
+        final ExternalAssetOwner externalAssetOwner = createAndGetAssetOwner(ownerExternalId);
+        return new CommandProcessingResultBuilder() //
+                .withEntityId(externalAssetOwner.getId()) //
+                .build();
     }
 }
